PLANET-7756: Navigation Menu: fix accessibility issues on mobile
- Rebase and update

--- a/assets/src/scss/layout/navbar/_burger-menu.scss
+++ b/assets/src/scss/layout/navbar/_burger-menu.scss
@@ -229,8 +229,7 @@ $transition-duration: .2s;
 
   &:focus,
   &:focus-visible {
-    outline: 2px solid #99c3ff;
-    outline-offset: 2px;
+    @include focus-styles;
   }
 
   @supports not (inset-inline-end: $sp-3) {
